# ABL-BoothApp

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.js
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: Landing.vue
docs/faq/: advanced.md  community.md  data-migration.md  hardware.md  images-ui.md  incidents.md  index.md  network.md  operation.md
docs/guide/: export.md  getting-started.md  network.md  why-offline.md  workflow.md
docs/images/: 图片 - 快捷方式.lnk
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: main.css
frontend/src/components/: GlobalAlert.vue  WebSocketTester.vue
frontend/src/components/customer/: PaymentModal.vue  ProductGrid.vue  ShoppingCart.vue
frontend/src/components/event/: CreateEventForm.vue  EditEventForm.vue  EventList.vue
frontend/src/components/order/: OrderCard.vue
frontend/src/components/product/: BoothpackSyncPanel.vue  CreateMasterProductForm.vue  EditMasterProductModal.vue  MasterProductList.vue
frontend/src/components/shared/: AppModal.vue  ImageUploader.vue  MainHeader.vue  UpdateModal.vue
frontend/src/components/stats/: SalesLineChart.vue  StatFilters.vue
frontend/src/composables/: useUpdateCheck.js
frontend/src/config/: theme.js
frontend/src/router/: index.js
frontend/src/services/: api.js  clipboard.js  socketService.js  url.js  useAlert.js
frontend/src/stores/: alertStore.js  authStore.js  customerStore.js  eventDetailStore.js  eventStatStore.js  eventStore.js  orderStore.js  productStore.js  syncStore.js  themeStore.js
frontend/src/utils/: dateFormatter.js  dateFormatter.test.js
frontend/src/views/: About.vue  AdminDashboard.vue  AdminEventOrders.vue  AdminEventProducts.vue  AdminEventStat.vue  AdminLayout.vue  AdminMasterProducts.vue  CustomerView.vue  EventPortalView.vue  Help.vue  LoginView.vue  NotFound.vue  ServerError.vue  ThemeSetting.vue  VendorEventSelection.vue  VendorView.vue
src/: App.vue
src-tauri/: 2  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/data/: sale_system.db
src-tauri/icons/: icon.icns
src-tauri/migrations/: 202601020001_init_schema.sql  202601180002_add_indexes.sql
src-tauri/src/: lib.rs  main.rs  server.rs  state.rs
src-tauri/src/api/: admin.rs  auth.rs  event.rs  guard.rs  info.rs  master_product.rs  mod.rs  order.rs  product.rs  stats.rs  sync.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/utils/: file.rs  ip.rs  mod.rs  security.rs
src-tauri/src/web/: mod.rs  mod_old.rs
