[package]
name = "booth-tool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "booth_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web 服务器 & 异步运行时
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] } # 0.7 是目前主流版本
tower = { version = "0.4", features = ["full"] } # Middleware support
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# 数据库 (关键)
# runtime-tokio-rustls 确保在移动端也能正常链接
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }

# 工具
chrono = { version = "0.4", features = ["serde"] } # 时间处理
local-ip-address = "0.5" # 获取本机 IP
rust-embed = "8.0" # 嵌入前端 dist
mime_guess = "2.0" 
jsonwebtoken = "9.2"
bcrypt = "0.15" # 密码哈希
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_xlsxwriter = "0.6"
urlencoding = "2.1"
[build-dependencies]
tauri-build = { version = "2.0", features = [] }
