[package]
name = "BoothKernel"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "booth_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [ "devtools" ] } 
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Web 服务器 & 异步运行时
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart"] } # 0.7 是目前主流版本
tower = { version = "0.4", features = ["full"] } # Middleware support
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# 数据库 (关键)
# runtime-tokio-rustls 确保在移动端也能正常链接
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono"] }

# 工具
chrono = { version = "0.4", features = ["serde"] } # 时间处理
local-ip-address = "0.5" # 获取本机 IP
# rust-embed = { version = "8.0", features = ["interpolate-folder-path"] }
include_dir = "0.7"
mime_guess = "2.0" 
jsonwebtoken = "9.2"
bcrypt = "0.15" # 密码哈希
uuid = { version = "1.0", features = ["v4", "serde"] }
rust_xlsxwriter = "0.84"
urlencoding = "2.1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
zip = "0.6"
walkdir = "2" 
tauri-plugin-http = "2"
tauri-plugin-os = "2"
dirs = "6.0.0"
tauri-plugin-app = "2.0.0-alpha.2"
[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"       # 移除 panic 的堆栈展开代码
codegen-units = 4     # 降低并行度以获得更好的优化
lto = true            # 启用链接时优化 (Link Time Optimization)
opt-level = "z"       # 针对体积进行优化 (s 是 size, z 是 size min)
strip = true          # 自动剥离符号表 (这一点对减小体积非常关键！)
